Prevent attribute columns from wrapping
Force the first column in tables to have
no wrapping

--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -445,6 +445,10 @@ html, body {
       padding: 10px;
     }
 
+    td:first-child {
+      white-space: nowrap;
+    }
+
     tr:last-child {
       border-bottom: 1px solid #ccc;
     }
